# coda

./: README.md  acquisition.py  clear_db.py  datasets.py  estimators.py  launch_missing_tasks.py  launch_missing_tasks2.py  main.py  metrics.py  modelselector_eps_gridsearch_v2.py  options.py  oracle.py  posteriors.py  pyproject.toml  setup.py  surrogates.py
ams/: base.py  bb.py  dirichlet.py  iid.py
ams/baselines/: __init__.py  activetesting.py  modelpicker.py  uncertainty.py  vma.py
coda/: __init__.py  base.py  beta.py  coda.py  datasets.py  ensemble.py  logging_util.py  options.py  oracle.py  util.py
coda/baselines/: __init__.py  activetesting.py  iid.py  modelpicker.py  uncertainty.py  vma.py
demo/: app.py  hf_zeroshot.py
paper/: fig1.py  fig3.py  fig4.py  fig5.py  tab1.py
scripts/: aggregate_results.py  clear_db.py  launch_all_methods.py  launch_missing_tasks2.py  merge_mlflow_results.py  model_picker_epsilon_gridsearch.py  modelselector_eps_gridsearch_v2.py
